--- a/wp-content/themes/egg/assets/less/main.less
+++ b/wp-content/themes/egg/assets/less/main.less
@@ -11,10 +11,12 @@
 @import "components/_forms";         // Form tweaks
 @import "components/_media";         // WordPress media
 @import "components/_wp-classes";    // WordPress generated classes
-@import "layouts/_general";          // General styling
 @import "layouts/_header";           // Header styling
 @import "layouts/_sidebar";          // Sidebar styling
 @import "layouts/_footer";           // Footer styling
 @import "layouts/_pages";            // Page styling
 @import "layouts/pages/_home";       // Home page styling
 @import "layouts/_posts";            // Post styling
+
+// header+footer styles
+@import "navmenu.less";
