--- a/wp-content/themes/egg/assets/css/main.css
+++ b/wp-content/themes/egg/assets/css/main.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Lato);
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
@@ -6622,6 +6623,13 @@ button.close {
     display: none !important;
   }
 }
+body {
+  font-family: 'Lato', sans-serif;
+}
+.noPadding {
+  padding-left: 0;
+  padding-right: 0;
+}
 .comment-list ol {
   list-style: none;
 }
@@ -6663,13 +6671,346 @@ figure.alignnone {
     width: 33.33333333%;
   }
 }
+#main-banner img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.home-banner .sectionIntro h3 {
+  text-transform: uppercase;
+  color: #664400;
+  border-bottom: 1px solid #664400;
+  text-align: center;
+  font-size: 30px;
+  letter-spacing: 2px;
+  padding-bottom: 9px;
+}
+.home-banner .sectionIntro .section-contents p {
+  text-align: center;
+  font-size: 18px;
+  line-height: 30px;
+  text-transform: uppercase;
+  padding: 0 26px;
+}
+.home-news {
+  background-color: #e6e4e0;
+  margin: 45px auto 80px;
+  padding: 40px 0px 10px;
+}
+.home-news h2 {
+  color: #664400;
+  border: 1px solid #664400;
+  padding: 10px;
+  background-color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+  position: absolute;
+  left: 50%;
+  margin-top: -70px;
+  margin-left: -58px;
+  width: 116px;
+  text-align: center;
+}
+.home-new-collection {
+  margin: 45px auto 80px;
+  padding: 40px 0px 10px;
+}
+.home-new-collection h2 {
+  color: #664400;
+  border: 1px solid #664400;
+  padding: 10px;
+  background-color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+  position: absolute;
+  left: 50%;
+  margin-top: -70px;
+  margin-left: -150px;
+  width: 300px;
+  text-align: center;
+}
+.home-new-collection .sectionIntro {
+  border: 1px solid #640;
+  padding: 40px 10px 10px;
+  position: relative;
+}
+.home-collections {
+  background-color: #e6e4e0;
+  margin: 45px auto 80px;
+  padding: 40px 0px 10px;
+}
+.home-collections h2 {
+  color: #664400;
+  border: 1px solid #664400;
+  padding: 10px;
+  background-color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+  position: absolute;
+  left: 50%;
+  margin-top: -70px;
+  margin-left: -118px;
+  width: 236px;
+  text-align: center;
+}
+.home-find-store {
+  margin: 45px auto 144px;
+  padding: 40px 0px 10px;
+}
+.home-find-store h2 {
+  color: #000;
+  border: 1px solid #664400;
+  padding: 23px 33px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+  position: absolute;
+  left: 50%;
+  margin-top: -29px;
+  margin-left: -185px;
+  width: 370px;
+  text-align: center;
+}
+.home-find-store h2:before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border: 1px solid #664400;
+}
+.container {
+  position: relative;
+}
+.navbar-default {
+  background-color: rgba(42, 28, 0, 0.6);
+  border: none;
+}
+.navbar-default .navbar-header .navbar-brand {
+  width: 111px;
+  height: auto;
+  padding: 10px;
+  margin-left: 12px;
+}
+.navbar-default .navbar-header .navbar-brand img {
+  width: 100%;
+  height: auto;
+}
+.navbar-default .navbar-header .navbar-toggle {
+  margin-right: 24px;
+}
+.navbar-default .nav-container .main-menu {
+  text-align: center;
+}
+.navbar-default .nav-container li {
+  text-align: center;
+  display: block;
+  float: none;
+}
+.navbar-default .nav-container li a {
+  color: #fff;
+}
+.navbar-default .nav-container li:hover a {
+  background: none;
+  color: #ccc;
+}
+.navbar-default .nav-container li.active a {
+  color: #fff;
+  background: none;
+}
+.navbar-default .nav-container li.active a:hover {
+  background: none;
+  color: #ccc;
+}
+.navbar-default .nav-container #menu-primary-navigation {
+  float: none;
+  text-align: center;
+  margin: 0 auto;
+  display: inline-block;
+}
+.navbar-default .nav-social {
+  padding-bottom: 10px;
+  color: rgba(225, 225, 225, 0.5);
+  text-align: center;
+}
+.navbar-default .nav-social a {
+  color: rgba(225, 225, 225, 0.5);
+}
+.navbar-default .nav-social a:hover {
+  color: rgba(225, 225, 225, 0.7);
+}
+.content-info {
+  padding: 22px 0;
+  background-color: #93908b;
+  color: #fff;
+  text-transform: uppercase;
+}
+.content-info .footer_link_container {
+  font-size: 12px;
+  letter-spacing: 1px;
+}
+.content-info .footer_link_container .navbar-nav {
+  float: none;
+  margin: 10px 0;
+}
+.content-info .footer_link_container .navbar-nav li {
+  display: inline-block;
+  margin: 10px 7px 10px 0;
+  border-right: 1px solid #fff;
+}
+.content-info .footer_link_container .navbar-nav li a {
+  color: #fff;
+  margin: 0px 7px 0px 0;
+  padding: 0;
+  display: inline-block;
+  border-bottom: 1px solid #fff;
+}
+.content-info .footer_link_container .navbar-nav li a:hover {
+  color: #ccc;
+  background: none;
+  border-bottom: 1px solid #ccc;
+}
+.content-info .footer_link_container .navbar-nav li:last-child {
+  border-right: 0px;
+}
+.content-info .nav-social {
+  color: rgba(225, 225, 225, 0.5);
+  text-align: center;
+  margin: 10px 0;
+}
+.content-info .nav-social a {
+  color: rgba(225, 225, 225, 0.5);
+  border-bottom: 0px;
+}
+.content-info .nav-social a:hover {
+  color: rgba(225, 225, 225, 0.7);
+}
+.content-info .nav-social .fa-inverse {
+  color: #93908B;
+}
 @media (min-width: 768px) {
-  .navbar-collapse.collapse {
-    display: block !important;
-    height: auto !important;
-    padding-bottom: 0;
-    overflow: visible !important;
-    visibility: visible!important;
+  .navbar-default .nav-container li {
+    display: inline-block;
   }
+}
+@media (min-width: 992px) {
+  .navbar-default .navbar-header {
+    position: absolute;
+    padding-top: 15px;
+  }
+  .navbar-default .navbar-header .navbar-brand {
+    padding: 0px;
+    margin-left: 0px;
+  }
+  .navbar-default .nav-container {
+    margin-top: 37px;
+  }
+  .navbar-default .nav-container li {
+    display: inline-block;
+  }
+  .navbar-default .nav-social {
+    padding-bottom: 0px;
+    position: absolute;
+    right: 0;
+    bottom: 11px;
+  }
+  .content-info .nav-social {
+    text-align: right;
+  }
+  .content-info .footer_link_container .navbar-nav {
+    margin: 0;
+  }
+  .content-info .footer_link_container .navbar-nav li a {
+    margin: 0 7px 0 0;
+  }
+}
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+.slick-list:focus {
+  outline: none;
+}
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+}
+.slick-track:before,
+.slick-track:after {
+  display: table;
+  content: '';
+}
+.slick-track:after {
+  clear: both;
+}
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+}
+[dir='rtl'] .slick-slide {
+  float: right;
+}
+.slick-slide img {
+  display: block;
+}
+.slick-slide.slick-loading img {
+  display: none;
+}
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+.slick-initialized .slick-slide {
+  display: block;
+}
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
 }
 /*# sourceMappingURL=main.css.map */
