--- a/wp-content/themes/egg/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_home.less
@@ -48,6 +48,7 @@
 	  margin-left: -58px;
 	  width: 116px;
 	  text-align: center;
+	  font-size:28px;
   }
 }
 
@@ -65,9 +66,10 @@
 	  position: absolute;
 	  left: 50%;
 	  margin-top: -70px;
-	  margin-left: -150px;
-	  width: 300px;
+	  margin-left: -141px;
+	  width: 282px;
 	  text-align: center;
+	  font-size:28px;
   }
   .sectionIntro {
 	  border: 1px solid #640;
@@ -95,6 +97,7 @@
 	  margin-left: -118px;
 	  width: 236px;
 	  text-align: center;
+	  font-size:28px;
   }
 }
 
@@ -114,6 +117,7 @@
 	margin-left: -185px;
 	width: 370px;
 	text-align: center;
+	font-size:28px;
 	  &:before{
 	  	content:""; 
 	  	display:block; 
@@ -144,6 +148,28 @@
 //===============================================================================
 @media (min-width: @screen-md-min) {
 
+.home-new-collection{
+  h2{
+	font-size:30px;
+	margin-left: -150px;
+	width: 300px;
+  }
+}
+.home-collections {
+  h2{
+	font-size:30px;
+  }
+}
+.home-news {
+  h2{
+	font-size:30px;
+  }
+}
+.home-find-store{
+  h2{
+	font-size:30px;
+  }
+}
 }
 
 //===============================================================================
