--- a/wp-content/themes/egg/assets/less/navmenu.less
+++ b/wp-content/themes/egg/assets/less/navmenu.less
@@ -35,6 +35,7 @@
 			float:none;
 			a{
 				color:#fff;
+				letter-spacing: 1px;
 			}
 			&:hover {
 				a{
@@ -162,12 +163,6 @@
 		}
 	}
 	
-	.nav-social {
-		padding-bottom: 0px;
-		position: absolute;
-		right: 0;
-		bottom: 11px;
-	}
 }
 
 .content-info{
@@ -193,5 +188,16 @@
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-lg-min) {
+
+
+.navbar-default {	
+	.nav-social {
+		padding-bottom: 0px;
+		position: absolute;
+		right: 0;
+		bottom: 11px;
+	}
+}
+
 
 }
