--- a/wp-content/themes/egg/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_home.less
@@ -3,73 +3,155 @@
 // Base
 //===============================================================================
 //===============================================================================
-#main-banner img{
-    display: block;
-    width: 100%;
-    height: auto;
+#main-banner {
+  position: relative;
+	
+	img{
+		display: block;
+		width: 100%;
+		height: auto;
+	}
+	.slick-prev, .slick-next {
+	  border: none;
+	  z-index: 100;
+	  text-indent: -9999px;
+	  position: absolute;
+	  top: 50%;
+	}
+	
+	.slick-prev {
+	  background: url(../img/arrow-left-white.png) no-repeat transparent center;
+	  left:22px;
+	  background-size: cover;
+	  width: 30px;
+	  height: 30px;
+	}
+	.slick-next{
+	  background: url(../img/arrow-right-white.png) no-repeat transparent center;
+	  right:22px;
+	  background-size: cover;
+	  width: 30px;
+	  height: 30px;
+	}
+
 }
- 
+
+
 
 .home-banner{
-	.sectionIntro{
-		h3{
-			text-transform: uppercase;
-			color:#664400;
-			border-bottom: 1px solid #664400;
-  			text-align: center;
-  			font-size: 30px;
-			  letter-spacing: 2px;
-			  padding-bottom: 9px;
-		}
-		.section-contents p{
-			text-align: center;
-			font-size: 18px;
-			line-height: 30px;
-			text-transform: uppercase;
-			padding: 0 26px;
-		}
+	.container{
+		margin: 45px auto;
+			h3{
+				text-transform: uppercase;
+				color:#664400;
+				border-bottom: 1px solid #664400;
+				text-align: center;
+				font-size: 23px;
+				letter-spacing: 3px;
+				padding-bottom: 9px;
+			}
+			.section-contents p{
+				text-align: center;
+				font-size: 15px;
+				line-height: 30px;
+				text-transform: uppercase;
+				padding: 0 26px;
+			}
 	}
+	
 }
 .home-news {
   background-color: #e6e4e0;
   margin: 45px auto 80px;
-  padding: 40px 0px 10px;
-  h2{
-	color: #664400;
+  padding: 50px 0px 63px;
+  .section-title{
+	text-align: center;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: -78px;
+	
+	h2{
+	  color: #664400;
+	  text-transform: uppercase;
+	  font-weight: bold;
 	  border: 1px solid #664400;
 	  padding: 10px;
 	  background-color: #fff;
-	  text-transform: uppercase;
-	  font-weight: bold;
-	  letter-spacing: 1px;
-	  position: absolute;
-	  left: 50%;
-	  margin-top: -70px;
-	  margin-left: -58px;
-	  width: 116px;
-	  text-align: center;
-	  font-size:28px;
+	  letter-spacing: 3px;
+	  margin-top: 0;
+	  margin-bottom: 0;
+	  display: inline-block;
+	  font-size: 23px;
+  	}
   }
+  .news-slider{
+  	background-color: #fff;
+  	padding: 10px;
+		.post-img img {width:100%;}
+		.post-title {
+			margin:8px 0;
+			height: 63px;
+			
+			display: -webkit-box;
+			-webkit-line-clamp: 3;
+			-webkit-box-orient: vertical;  
+			max-height: 73px; /* I needed this to get it to work */
+			overflow: hidden;
+  
+			a{color:#666666;}
+			}
+	}
+	
+	.slick-prev, .slick-next {
+	  border: none;
+	  z-index: 100;
+	  text-indent: -9999px;
+	  position: absolute;
+	  top: 45%;
+	}
+	
+	.slick-prev {
+	  background: url(../img/arrow-left-brown.png) no-repeat transparent center;
+	  left:-7%;
+	  background-size: cover;
+	  width: 30px;
+	  height: 30px;
+	}
+	.slick-next{
+	  background: url(../img/arrow-right-brown.png) no-repeat transparent center;
+	  right: -7%;
+	  background-size: cover;
+	  width: 30px;
+	  height: 30px;
+	}
+	
+  
 }
 
 .home-new-collection{
   margin: 45px auto 80px;
   padding: 40px 0px 10px;
-  h2{
-	color: #664400;
+  .section-title{
+	text-align: center;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: -29px;
+	
+	h2{
+	  color: #664400;
+	  text-transform: uppercase;
+	  font-weight: bold;
 	  border: 1px solid #664400;
 	  padding: 10px;
 	  background-color: #fff;
-	  text-transform: uppercase;
-	  font-weight: bold;
-	  letter-spacing: 1px;
-	  position: absolute;
-	  left: 50%;
-	  margin-top: -70px;
-	  margin-left: -141px;
-	  width: 282px;
-	  text-align: center;
-	  font-size:28px;
+	  letter-spacing: 3px;
+	  margin-top: 0;
+	  margin-bottom: 0;
+	  display: inline-block;
+	  font-size: 23px;
+  	}
   }
   .sectionIntro {
 	  border: 1px solid #640;
@@ -83,53 +165,67 @@
   background-color: #e6e4e0;
   margin: 45px auto 80px;
   padding: 40px 0px 10px;
-  h2{
-	color: #664400;
+  .section-title{
+	text-align: center;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: -67px;
+	
+	h2{
+	  color: #664400;
+	  text-transform: uppercase;
+	  font-weight: bold;
 	  border: 1px solid #664400;
 	  padding: 10px;
 	  background-color: #fff;
-	  text-transform: uppercase;
-	  font-weight: bold;
-	  letter-spacing: 1px;
-	  position: absolute;
-	  left: 50%;
-	  margin-top: -70px;
-	  margin-left: -118px;
-	  width: 236px;
-	  text-align: center;
-	  font-size:28px;
+	  letter-spacing: 3px;
+	  margin-top: 0;
+	  margin-bottom: 0;
+	  display: inline-block;
+	  font-size: 23px;
+  	}
   }
 }
 
 .home-find-store{
-  margin: 45px auto 144px;
-  padding: 40px 0px 10px;
-  h2{
-	color: #000;
-	border: 1px solid #664400;
-	padding: 23px 33px;
-	text-transform: uppercase;
-	font-weight: bold;
-	letter-spacing: 1px;
-	position: absolute;
-	left: 50%;
-	margin-top: -29px;
-	margin-left: -185px;
-	width: 370px;
+  margin: 45px auto 89px;
+  padding: 0px 0px 10px;
+  
+  .section-title{
 	text-align: center;
-	font-size:28px;
-	  &:before{
-	  	content:""; 
-	  	display:block; 
-	  	position:absolute; 
-	  	z-index:-1; 
-	  	top:5px; 
-	  	left:5px; 
-	  	right:5px; 
-		bottom:5px; 
-		border:1px solid #664400;
-	  }
-  }
+	left: 0;
+	right: 0;
+	top: -67px;
+		.find-store-btn{
+			border: 1px solid #664400;
+			padding: 5px;
+			display: inline-block;
+			width: 141px;
+				h2{
+					margin-top: 0;
+					margin-bottom: 0;
+					display: inline-block;
+					color: #000;
+					border: 1px solid #664400;
+					padding: 18px 18px;
+					text-transform: uppercase;
+					font-weight: bold;
+					letter-spacing: 3px;
+					margin-top: 0;
+					margin-bottom: 0;
+					display: inline-block;
+					font-size:20px;
+				}
+		}
+		.find-store-arrow{
+			position: absolute;
+			  top: 33px;
+			  padding-left: 5px;
+		}
+		
+	}
+   
   
 }
 
@@ -140,6 +236,82 @@
 //===============================================================================
 @media (min-width: @screen-sm-min) {
 
+#main-banner {
+  position: relative;
+	
+	.slick-prev {
+	  width: 50px;
+	  height: 49px;
+	}
+	.slick-next{
+	  width: 50px;
+	  height: 49px;
+	}
+
+}
+
+
+.home-banner{
+	.sectionIntro{
+		h3{
+  			font-size: 30px;
+		}
+		.section-contents p{
+			font-size: 18px;
+		}
+	} 
+}
+
+.home-new-collection{
+  .section-title{
+  	h2{
+		font-size:30px;
+	  }
+	}
+}
+.home-collections {
+  .section-title{
+  	h2{
+		font-size:30px;
+	  }
+	}
+}
+.home-news {
+  .section-title{
+  	h2{
+		font-size:30px;
+	  }
+	}
+
+	.slick-prev {
+	  width: 50px;
+	  height: 49px;
+	}
+	.slick-next{
+	  width: 50px;
+	  height: 49px;
+	}
+	
+}
+
+.home-find-store{
+  .section-title{
+	.find-store-btn{
+			width: initial;
+				h2{
+					padding: 18px 60px;
+					font-size:30px;
+				}
+		}
+		.find-store-arrow{
+			  top: 18px;
+			  padding-left: 16px;
+		}
+	}
+}
+
+
+
 }
 //===============================================================================
 //===============================================================================
@@ -148,28 +320,9 @@
 //===============================================================================
 @media (min-width: @screen-md-min) {
 
-.home-new-collection{
-  h2{
-	font-size:30px;
-	margin-left: -150px;
-	width: 300px;
-  }
-}
-.home-collections {
-  h2{
-	font-size:30px;
-  }
-}
-.home-news {
-  h2{
-	font-size:30px;
-  }
-}
-.home-find-store{
-  h2{
-	font-size:30px;
-  }
-}
+
+
+
 }
 
 //===============================================================================
