--- a/wp-content/themes/egg/assets/css/main.css
+++ b/wp-content/themes/egg/assets/css/main.css
@@ -6791,6 +6791,25 @@ figure.alignnone {
   width: 30px;
   height: 30px;
 }
+.home-news .view-all-btn {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -86px;
+}
+.home-news .view-all-btn a {
+  color: #000;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 5px 10px;
+  background-color: #E6E4E0;
+  letter-spacing: 3px;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: inline-block;
+  font-style: italic;
+}
 .home-new-collection {
   margin: 45px auto 80px;
   padding: 40px 0px 10px;
