--- a/wp-content/themes/egg/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_home.less
@@ -64,6 +64,7 @@
   background-color: #e6e4e0;
   margin: 45px auto 80px;
   padding: 50px 0px 63px;
+  
   .section-title{
 	text-align: center;
 	position: absolute;
@@ -126,7 +127,26 @@
 	  height: 30px;
 	}
 	
-  
+	.view-all-btn{
+	text-align: center;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: -86px;
+	 
+		a{
+		  color: #000;
+		  text-transform: uppercase;
+		  font-weight: bold;
+		  padding: 5px 10px;
+		  background-color: #E6E4E0;
+		  letter-spacing: 3px;
+		  margin-top: 0;
+		  margin-bottom: 0;
+		  display: inline-block;
+		  font-style: italic;
+		}
+	}
 }
 
 .home-new-collection{
