--- a/wp-content/themes/egg/assets/css/main.css
+++ b/wp-content/themes/egg/assets/css/main.css
@@ -6800,7 +6800,6 @@ figure.alignnone {
 }
 .home-news .view-all-btn a {
   color: #000;
-  text-transform: uppercase;
   font-weight: bold;
   padding: 5px 10px;
   background-color: #E6E4E0;
@@ -6839,6 +6838,27 @@ figure.alignnone {
   padding: 40px 10px 10px;
   position: relative;
 }
+.home-new-collection .sectionIntro .section-contents .view-all-btn {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -26px;
+}
+.home-new-collection .sectionIntro .section-contents .view-all-btn a {
+  color: #000;
+  font-weight: bold;
+  padding: 0 10px 5px 10px;
+  background-color: #fff;
+  border-left: 1px solid #640;
+  border-bottom: 1px solid #640;
+  border-right: 1px solid #640;
+  letter-spacing: 3px;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: inline-block;
+  font-style: italic;
+}
 .home-collections {
   background-color: #e6e4e0;
   margin: 45px auto 80px;
@@ -6863,6 +6883,24 @@ figure.alignnone {
   margin-bottom: 0;
   display: inline-block;
   font-size: 23px;
+}
+.home-collections .view-all-btn {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -33px;
+}
+.home-collections .view-all-btn a {
+  color: #000;
+  font-weight: bold;
+  padding: 5px 10px;
+  background-color: #E6E4E0;
+  letter-spacing: 3px;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: inline-block;
+  font-style: italic;
 }
 .home-find-store {
   margin: 45px auto 89px;
@@ -6943,6 +6981,43 @@ figure.alignnone {
     top: 18px;
     padding-left: 16px;
   }
+}
+#news-page {
+  background-color: #e6e4e0;
+}
+#news-page .page-head-container {
+  position: relative;
+}
+#news-page .page-head-container img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+#news-page .page-head-container .page-title {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -23px;
+}
+#news-page .page-head-container .page-title h2 {
+  color: #664400;
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid #664400;
+  padding: 10px 80px;
+  background-color: #fff;
+  letter-spacing: 3px;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: inline-block;
+  font-size: 23px;
+}
+#news-page .container {
+  padding: 70px 0;
+}
+#news-page .container .content-container {
+  background-color: #fff;
 }
 .container {
   position: relative;
