--- a/wp-content/themes/egg/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_home.less
@@ -136,7 +136,6 @@
 	 
 		a{
 		  color: #000;
-		  text-transform: uppercase;
 		  font-weight: bold;
 		  padding: 5px 10px;
 		  background-color: #E6E4E0;
@@ -177,6 +176,31 @@
 	  border: 1px solid #640;
 	  padding: 40px 10px 10px;
 	  position:relative;
+		.section-contents{
+			.view-all-btn{
+				text-align: center;
+				position: absolute;
+				left: 0;
+				right: 0;
+				bottom: -26px;
+				 
+					a{
+					  color: #000;
+					  font-weight: bold;
+					  padding: 0 10px 5px 10px;
+					  background-color: #fff;
+					  border-left:1px solid #640;
+					  border-bottom:1px solid #640;
+					  border-right:1px solid #640;
+					  letter-spacing: 3px;
+					  margin-top: 0;
+					  margin-bottom: 0;
+					  display: inline-block;
+					  font-style: italic;
+					}
+				}
+	
+		}
 	}
 }
 
@@ -206,6 +230,25 @@
 	  font-size: 23px;
   	}
   }
+  .view-all-btn{
+	text-align: center;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: -33px;
+	 
+		a{
+		  color: #000;
+		  font-weight: bold;
+		  padding: 5px 10px;
+		  background-color: #E6E4E0;
+		  letter-spacing: 3px;
+		  margin-top: 0;
+		  margin-bottom: 0;
+		  display: inline-block;
+		  font-style: italic;
+		}
+	}
 }
 
 .home-find-store{
