--- a/wp-content/themes/egg/assets/less/layouts/pages/_news.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_news.less
@@ -37,9 +37,37 @@
 	}
 	.container{
 	  padding: 70px 0;
-	  	.content-container{
+	  	.row{
 			background-color:#fff;
+			margin:0 0 50px 0;
+				.left-content-container{
+					padding-top: 20px;
+					padding-bottom: 20px;
+						.post-img img{
+							width:100%;
+						}
+					}
+				.right-content-container{
+					padding: 20px 30px;
+						h4{ 
+							margin-top: 3px;
+						}
+						.news-content-container{
+						}
+						.expend-btn{
+							cursor:pointer;display:
+							inline-block;
+							margin:10px 0;
+							float: right;
+							background-image:url(../img/icon-expend.png);
+							width:56px;
+							height:56px;
+						}
+						.expended{background-image:url(../img/icon-expended.png);}
+				}
+				
 		}
+		
 	 }
  
 }
