--- a/wp-content/themes/egg/assets/less/navmenu.less
+++ b/wp-content/themes/egg/assets/less/navmenu.less
@@ -6,16 +6,28 @@
 .container {
 	position:relative;
 }
+.navbar-fixed-top{
+  position: absolute;
+
+ }
+ .main{
+   position: relative;
+   top: 64px;
+   padding-bottom: 64px;
+}
 .navbar-default {
-    background-color: rgba(42, 28, 0, 0.6);
+    background-color: rgba(42, 28, 0, 0.9);
     border: none;
+	margin-bottom:0;
 	.navbar-header{
+	 	margin-right: 0;
+  		margin-left: 0;
 		.navbar-brand{
 			width: 111px;
 			height:auto;
 			padding: 10px;
 			margin-left: 12px;
-
+		
 			img{
 				width:100%;
 				height:auto;
@@ -61,16 +73,16 @@
 	}
 	.nav-social {
 		padding-bottom: 10px;
-		color: rgba(225, 225, 225, 0.5);
 		text-align: center;
 		a{
 			color: rgba(225, 225, 225, 0.5);
 			&:hover{color: rgba(225, 225, 225, 0.7);}
 		}
+		.fa-stack{font-size: 100%;}
 	}
 }
 .content-info{
-	padding: 22px 0;
+	padding: 10px 0;
 	background-color: rgb(147, 144, 139);
 	color:#fff;
 	text-transform: uppercase;
@@ -126,6 +138,10 @@
 //===============================================================================
 //===============================================================================
 @media (min-width: @screen-sm-min) {
+.main{
+   position: initial;
+   padding-bottom: 0;
+}
 
 .navbar-default {
 	.nav-container{
@@ -146,10 +162,10 @@
 @media (min-width: @screen-md-min) {
 
 .navbar-default {
-
+	
 	.navbar-header {
-	  position: absolute;
 	  padding-top: 15px;
+	  position: relative;
 	  .navbar-brand{
 	    padding: 0px;
 		margin-left: 0px; 
@@ -157,7 +173,9 @@
 	}
 	
 	.nav-container{
-	    margin-top: 37px;
+		  margin-top: -37px;
+		  width: 100%;
+		  float: left;
 		li{
 			display: inline-block;
 		}
