--- a/wp-content/themes/egg/assets/less/layouts/pages/_news.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_news.less
@@ -8,11 +8,11 @@
   
 	.page-head-container {
 		position:relative;
-		img{
+		/*img{
 			display: block;
 			width: 100%;
 			height: auto;
-		}
+		}*/
 		.page-title{
 			text-align: center;
 			position: absolute;
