--- a/wp-content/themes/egg/assets/less/main.less
+++ b/wp-content/themes/egg/assets/less/main.less
@@ -18,6 +18,7 @@
 @import "layouts/pages/_home";       // Home page styling
 @import "layouts/_posts";            // Post styling
 @import "layouts/pages/_news";       // News page styling
+@import "layouts/pages/_product";       // Product content page styling
 
 // header+footer styles
 @import "navmenu.less";
