--- a/wp-content/themes/egg/assets/less/_global.less
+++ b/wp-content/themes/egg/assets/less/_global.less
@@ -1,7 +1,73 @@
+//===============================================================================
+//===============================================================================
+// Base
+//===============================================================================
+//===============================================================================
+
 body{
 	font-family: 'Lato', sans-serif;
 }
 .noPadding{
 	padding-left:0;
 	padding-right:0;
+}
+
+.page-head-container{
+	position:relative;
+	img{ 
+		display: block;
+		width: 100%;
+		height: auto;}
+	.page-title{
+		text-align: center;
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: -23px;
+		
+		h2{
+		  color: #664400;
+		  text-transform: uppercase;
+		  font-weight: bold;
+		  border: 1px solid #664400;
+		  padding: 10px 37px;
+		  background-color: #fff;
+		  letter-spacing: 3px;
+		  margin-top: 0;
+		  margin-bottom: 0;
+		  display: inline-block;
+		  font-size: 23px;
+		}
+	}
+}
+ 
+
+//===============================================================================
+//===============================================================================
+// tablet
+//===============================================================================
+//===============================================================================
+@media (min-width: @screen-sm-min) {
+.page-head-container{
+	.page-title{
+		h2{padding: 10px 80px;}
+		}
+}
+}
+//===============================================================================
+//===============================================================================
+// Desktop
+//===============================================================================
+//===============================================================================
+@media (min-width: @screen-md-min) {
+
+}
+
+//===============================================================================
+//===============================================================================
+// Wide desktop
+//===============================================================================
+//===============================================================================
+@media (min-width: @screen-lg-min) {
+
 }
