--- a/wp-content/themes/egg/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_home.less
@@ -52,7 +52,6 @@
 			}
 			.section-contents p{
 				text-align: center;
-				font-size: 15px;
 				line-height: 30px;
 				text-transform: uppercase;
 				padding: 0 26px;
@@ -77,7 +76,7 @@
 	  text-transform: uppercase;
 	  font-weight: bold;
 	  border: 1px solid #664400;
-	  padding: 10px;
+	  padding: 10px 20px;
 	  background-color: #fff;
 	  letter-spacing: 3px;
 	  margin-top: 0;
@@ -114,14 +113,14 @@
 	
 	.slick-prev {
 	  background: url(../img/arrow-left-brown.png) no-repeat transparent center;
-	  left:-7%;
+	  left:-5%;
 	  background-size: cover;
 	  width: 30px;
 	  height: 30px;
 	}
 	.slick-next{
 	  background: url(../img/arrow-right-brown.png) no-repeat transparent center;
-	  right: -7%;
+	  right: -5%;
 	  background-size: cover;
 	  width: 30px;
 	  height: 30px;
@@ -163,7 +162,7 @@
 	  text-transform: uppercase;
 	  font-weight: bold;
 	  border: 1px solid #664400;
-	  padding: 10px;
+	  padding: 10px 20px;
 	  background-color: #fff;
 	  letter-spacing: 3px;
 	  margin-top: 0;
@@ -174,7 +173,8 @@
   }
   .sectionIntro {
 	  border: 1px solid #640;
-	  padding: 40px 10px 10px;
+	  padding-top: 40px;
+	  padding-bottom:10px;
 	  position:relative;
 		.section-contents{
 			.view-all-btn{
@@ -221,7 +221,7 @@
 	  text-transform: uppercase;
 	  font-weight: bold;
 	  border: 1px solid #664400;
-	  padding: 10px;
+	  padding: 10px 20px;
 	  background-color: #fff;
 	  letter-spacing: 3px;
 	  margin-top: 0;
@@ -264,14 +264,12 @@
 			border: 1px solid #664400;
 			padding: 5px;
 			display: inline-block;
-			width: 141px;
 				h2{
 					margin-top: 0;
 					margin-bottom: 0;
 					display: inline-block;
 					color: #000;
 					border: 1px solid #664400;
-					padding: 18px 18px;
 					text-transform: uppercase;
 					font-weight: bold;
 					letter-spacing: 3px;
@@ -279,11 +277,17 @@
 					margin-bottom: 0;
 					display: inline-block;
 					font-size:20px;
+						a{
+							  padding: 25px 11px;
+								color: #000;
+								display: inline-block;
+							&:hover{text-decoration:none;}
+							}
 				}
 		}
 		.find-store-arrow{
 			position: absolute;
-			  top: 33px;
+			  top: 20px;
 			  padding-left: 5px;
 		}
 		
@@ -317,10 +321,10 @@
 .home-banner{
 	.sectionIntro{
 		h3{
-  			font-size: 30px;
+  			font-size: 29px;
 		}
 		.section-contents p{
-			font-size: 18px;
+			font-size: 17px;
 		}
 	} 
 }
@@ -349,10 +353,12 @@
 	.slick-prev {
 	  width: 50px;
 	  height: 49px;
+	  left:-7%;
 	}
 	.slick-next{
 	  width: 50px;
 	  height: 49px;
+	  right:-7%;
 	}
 	
 }
@@ -362,12 +368,12 @@
 	.find-store-btn{
 			width: initial;
 				h2{
-					padding: 18px 60px;
 					font-size:30px;
+					a{padding: 25px 60px;}
 				}
 		}
 		.find-store-arrow{
-			  top: 18px;
+			  top: 23px;
 			  padding-left: 16px;
 		}
 	}
@@ -384,6 +390,21 @@
 @media (min-width: @screen-md-min) {
 
 
+.home-news {
+  .section-title{
+  	h2{
+		font-size:30px;
+	  }
+	}
+
+	.slick-prev {
+	  left:-10%;
+	}
+	.slick-next{
+	  right:-10%;
+	}
+	
+}
 
 
 }
