--- a/wp-content/themes/egg/assets/less/layouts/pages/_news.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_news.less
@@ -6,38 +6,10 @@
 #news-page{
   background-color:#e6e4e0;
   
-	.page-head-container {
-		position:relative;
-		/*img{
-			display: block;
-			width: 100%;
-			height: auto;
-		}*/
-		.page-title{
-			text-align: center;
-			position: absolute;
-			left: 0;
-			right: 0;
-			bottom: -23px;
-			
-			h2{
-			  color: #664400;
-			  text-transform: uppercase;
-			  font-weight: bold;
-			  border: 1px solid #664400;
-			  padding: 10px 80px;
-			  background-color: #fff;
-			  letter-spacing: 3px;
-			  margin-top: 0;
-			  margin-bottom: 0;
-			  display: inline-block;
-			  font-size: 23px;
-			}
-		}
-	}
+	
 	.container{
 	  padding: 70px 0;
-	  	.row{
+	  	.news-container{
 			background-color:#fff;
 			margin:0 0 50px 0;
 				.left-content-container{
@@ -48,7 +20,7 @@
 						}
 					}
 				.right-content-container{
-					padding: 20px 30px;
+					padding: 0px 20px;;
 						h4{ 
 							margin-top: 3px;
 						}
@@ -78,6 +50,17 @@
 //===============================================================================
 @media (min-width: @screen-sm-min) {
 
+#news-page{
+
+	.container{
+	  	.row{
+				.right-content-container{
+					padding: 20px 30px;
+					}
+			}
+	}
+
+}
 
 }
 //===============================================================================
