--- a/wp-content/themes/egg/assets/less/layouts/pages/_product.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_product.less
@@ -30,14 +30,16 @@
 		.product-left-container{
 			padding-top: 64px;
 			padding-bottom:20px;
+			background-color: #fff;
 			}
 		.product-right-container{
-			background-color: #e6e4e0;
-			padding: 50px;
+			padding: 64px 40px;
 				.product-info {
-				  margin-bottom: 30px;
+				    margin-bottom: 30px;
+				    padding: 0 6px;
 				}
 			}
+		.row{margin:0;  background-color: #e6e4e0;}
 		.model-name{
 			text-align: center;
 			position: absolute;
@@ -61,7 +63,10 @@
 				}
 		}
 		#product-slider{
+			
 			.product-slider-item{
+				padding-left: 5px;
+		    	padding-right: 5px;
 				img{
 					width:100%;
 					height:auto;}
@@ -72,21 +77,19 @@
 			  text-indent: -9999px;
 			  position: absolute;
 			  top: 45%;
+			  
+			  background-size: cover;
+			  width: 21px;
+			  height: 24px;
 			}
 			
 			.slick-prev {
 			  background: url(../img/arrow-left-triangle.png) no-repeat transparent center;
-			  left:-5%;
-			  background-size: cover;
-			  width: 21px;
-			  height: 24px;
+			  left:-8%;
 			}
 			.slick-next{
 			  background: url(../img/arrow-right-triangle.png) no-repeat transparent center;
-			  right: -5%;
-			  background-size: cover;
-			  width: 21px;
-			  height: 24px;
+			  right: -8%;
 			}
 			
 			
@@ -95,6 +98,8 @@
 	
 	}
 	.others-collection-container{
+		padding-top: 40px;
+ 		padding-bottom: 50px;
 		h3{
 			color: #664400;
   			text-transform: uppercase;
@@ -104,11 +109,32 @@
 				border-top:1px solid #664400;
 				border-bottom:1px solid #664400;
 				margin-bottom:30px;
-				padding:20px 40px;
+				padding:28px 40px;
 					#collection-slider{
 						img{
-								width:100%;
-								height:auto;}
+							width:100%;
+							height:auto;}
+						.slick-prev, .slick-next {
+						  border: none;
+						  z-index: 100;
+						  text-indent: -9999px;
+						  position: absolute;
+						  top: 45%;
+						  
+						  background-size: cover;
+						  width: 21px;
+						  height: 24px;
+						}
+						
+						.slick-prev {
+						  background: url(../img/arrow-left-triangle.png) no-repeat transparent center;
+						  left:-5%;
+						}
+						.slick-next{
+						  background: url(../img/arrow-right-triangle.png) no-repeat transparent center;
+						  right: -5%;
+						}
+			
 						}
 			}	
 	}
@@ -140,6 +166,8 @@
 			}
 		
 		}
+		
+		
 	
 }
 
@@ -161,6 +189,27 @@
 			}
 		
 		}
+	.others-collection-container{
+		
+		
+		.collection-container{
+				
+					#collection-slider{
+						
+						
+						.slick-prev {
+						  background: url(../img/arrow-left-triangle.png) no-repeat transparent center;
+						  left:-4%;
+						}
+						.slick-next{
+						  background: url(../img/arrow-right-triangle.png) no-repeat transparent center;
+						  right: -4%;
+						}
+			
+						}
+			}	
+	}
+	
 	}
 
 }
