--- a/wp-content/themes/egg/assets/less/layouts/pages/_home.less
+++ b/wp-content/themes/egg/assets/less/layouts/pages/_home.less
@@ -156,6 +156,7 @@
 	left: 0;
 	right: 0;
 	top: -29px;
+	z-index: 10;
 	
 	h2{
 	  color: #664400;
@@ -172,11 +173,13 @@
   	}
   }
   .sectionIntro {
-	  border: 1px solid #640;
-	  padding-top: 40px;
-	  padding-bottom:10px;
-	  position:relative;
+	  
 		.section-contents{
+			border: 1px solid #640;
+			padding: 40px 20px;
+			padding-bottom:10px;
+			position:relative;
+			
 			.view-all-btn{
 				text-align: center;
 				position: absolute;
