--- a/wp-content/themes/egg/assets/less/navmenu.less
+++ b/wp-content/themes/egg/assets/less/navmenu.less
@@ -79,6 +79,7 @@
 			&:hover{color: rgba(225, 225, 225, 0.7);}
 		}
 		.fa-stack{font-size: 100%;}
+		.fa-inverse {color: rgba(42, 28, 0, 0.9);}
 	}
 }
 .content-info{
@@ -86,6 +87,7 @@
 	background-color: rgb(147, 144, 139);
 	color:#fff;
 	text-transform: uppercase;
+	text-align: center;
 	.footer_link_container{
 		font-size: 12px;
 		letter-spacing: 1px;
@@ -164,7 +166,9 @@
 		  padding-top: 5px;
 	}
 }
-	
+.content-info{
+	text-align:left;
+}
   
 }
 
@@ -208,7 +212,7 @@
 		padding-bottom: 0px;
 		  position: absolute;
 		  right: 0; 
-		  bottom: 11px;
+		  bottom: 16px;
 	}
 	
 }
@@ -243,7 +247,7 @@
 		padding-bottom: 0px;
 		position: absolute;
 		right: 0;
-		bottom: 11px;
+		bottom: 16px;
 	}
 }
 
